--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="animaciones/agua/index.html"></a>
+    <a href="animaciones/agua/index.html">prueba</a>
 </body>
 </html>
