--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style></style>
 <body>
+    <a href="animaciones/agua/index.html">prueba</a>
+    <a href="animaciones/agua/index.html">prueba</a>
+    <a href="animaciones/agua/index.html">prueba</a>
     <a href="animaciones/agua/index.html">prueba</a>
 </body>
 </html>
