--- a/index.html
+++ b/index.html
@@ -7,9 +7,20 @@
 </head>
 <style></style>
 <body>
-    <a href="animaciones/agua/index.html">prueba</a>
-    <a href="animaciones/agua/index.html">prueba</a>
-    <a href="animaciones/agua/index.html">prueba</a>
-    <a href="animaciones/agua/index.html">prueba</a>
+    <ul>
+        <li><a href="animaciones/agua/index.html">Animacion/agua</a></li>
+        <li><a href="animaciones/bomba/index.html">Animacion/bomba</a></li>
+        <li><a href="animaciones/cartas/index.html">Animacion/cartas</a></li>
+        <li><a href="animaciones/comic/index.html">Animacion/comic</a></li>
+        <li><a href="animaciones/hulk/index.html">Animacion/hulk</a></li>
+        <li><a href="animaciones/mana/index.html">Animacion/mana</a></li>
+        <li><a href="animaciones/puzle/index.html">Animacion/puzle</a></li>
+        <li><a href="animaciones/ramen/index.html">Animacion/ramen</a></li>
+        <li><a href="animaciones/venecia/index.html">Animacion/venecia</a></li>
+        <li><a href="CV/index.html">CV</a></li>
+        <li><a href="Ejercicio 0/Ejercicio 0/index.html">Ejercicio 0</a></li>
+        <li><a href="pagina flex/index.html">Pagina flex</a></li>
+        <li><a href="rosalia/index.html">rosalia</a></li>
+    </ul>
 </body>
 </html>
