arreglo de la rosalia

--- a/rosalia/index.html
+++ b/rosalia/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="header">
-    <img class="logo" src="/img/instagram-text-icon.webp">
+    <img class="logo" src="img/instagram-text-icon.webp">
     <input type="search" id="barra_busqueda">
     <div id="current_acc">
       <div id="log_in">
@@ -21,21 +21,21 @@
   </div>
   <div id="page">
   <div id="account">
-    <img class="pfp" src="/img/378026912_636508751799068_7562080748937477703_n.jpg">
+    <img class="pfp" src="img/378026912_636508751799068_7562080748937477703_n.jpg">
     <p id="account_name">rosalia.vt</p>
     <p id="place">Los Angeles, California</p>
   </div>
-  <img class="photo" src="/img/81942168_189659958882818_9042241740582234247_n.jpg">
+  <img class="photo" src="img/81942168_189659958882818_9042241740582234247_n.jpg">
   <div id="content">
     <div id="comments_desktop">
 
     </div>
     <div id="options">
       <div id="icons">
-        <img id="icon_like" src="/img/Heart.svg">
-        <img id="icon_comment" src="/img/ChatBubbleOvalLeft.svg">
-        <img id="icon_share" src="/img/PaperAirplane.svg"> 
-        <img id="icon_bookmark" src="/img/Bookmark.svg">
+        <img id="icon_like" src="img/Heart.svg">
+        <img id="icon_comment" src="img/ChatBubbleOvalLeft.svg">
+        <img id="icon_share" src="img/PaperAirplane.svg"> 
+        <img id="icon_bookmark" src="img/Bookmark.svg">
       </div>
       <div id="detalles">
         <p id="Me_gustas">1.430.647 Me gusta</p>
