Añadido Juego Espacial

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <li><a href="Ejercicio 0/Ejercicio 0/index.html">Ejercicio 0</a></li>
         <li><a href="pagina flex/index.html">Pagina flex</a></li>
         <li><a href="rosalia/index.html">rosalia</a></li>
+        <li><a href="juego_espacio/index.html">Juego Espacial</a></li>
+        
     </ul>
 </body>
 </html>
