añadido aviso en index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <style></style>
 <body>
+    <h1>AVISO: RECARGA SI NO SE VE ALGUNO POR SI ACASO LAS CACHE NO LA ENSEÑA</h1>
     <ul>
         <li><a href="animaciones/agua/index.html">Animacion/agua</a></li>
         <li><a href="animaciones/bomba/index.html">Animacion/bomba</a></li>
@@ -22,7 +23,6 @@
         <li><a href="pagina flex/index.html">Pagina flex</a></li>
         <li><a href="rosalia/index.html">rosalia</a></li>
         <li><a href="juego_espacio/index.html">Juego Espacial</a></li>
-        
     </ul>
 </body>
 </html>
