--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <style></style>
 <body>
     <h1>AVISO: RECARGA SI NO SE VE ALGUNO POR SI ACASO LAS CACHE NO LA ENSEÑA</h1>
+    <br>
+    <h2>Paginas web:</h2>
     <ul>
         <li><a href="animaciones/agua/index.html">Animacion/agua</a></li>
         <li><a href="animaciones/bomba/index.html">Animacion/bomba</a></li>
@@ -23,6 +25,18 @@
         <li><a href="pagina flex/index.html">Pagina flex</a></li>
         <li><a href="rosalia/index.html">rosalia</a></li>
         <li><a href="juego_espacio/index.html">Juego Espacial</a></li>
+    </ul>
+    <br>
+    <br>
+    <h2>Mock Ups:</h2>
+    <ul>
+        <li><a href="files/Pagina_Cine_JuanAldama.pdf">Cines</a></li>
+    </ul>
+    <br>
+    <br>
+    <h2>Guias de estilo:</h2>
+    <ul>
+        <li><a href=""></a></li>
     </ul>
 </body>
 </html>
