--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 </head>
 <style></style>
 <body>
-    <h1>AVISO: RECARGA SI NO SE VE ALGUNO POR SI ACASO LAS CACHE NO LA ENSEÑA</h1>
-    <br>
+    <h3>AVISO: si has visitado esta pagina antes de un cambio, recarga ya que la cache puede estar no cargando algo</h3>
     <h2>Paginas web:</h2>
     <ul>
         <li><a href="animaciones/agua/index.html">Animacion/agua</a></li>
@@ -27,12 +26,10 @@
         <li><a href="juego_espacio/index.html">Juego Espacial</a></li>
     </ul>
     <br>
-    <br>
     <h2>Mock Ups:</h2>
     <ul>
         <li><a href="files/Pagina_Cine_JuanAldama.pdf">Cines</a></li>
     </ul>
-    <br>
     <br>
     <h2>Guias de estilo:</h2>
     <ul>
