ya no se que hacer con el index

--- a/index.html
+++ b/index.html
@@ -5,35 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<style></style>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<style>
+    .btn {
+        border: 1px solid transparent;
+        width: 200px;
+        margin: 5px;
+        background-color: #2c84f4;
+    }
+
+    body {
+        text-align: center;
+
+    }
+</style>
 <body>
-    <h3>AVISO: si has visitado esta pagina antes de un cambio, recarga ya que la cache puede estar no cargando algo</h3>
+    <p>AVISO: si has visitado esta pagina antes de un cambio, recarga ya que la cache puede estar no cargando algo</p>
     <h2>Paginas web:</h2>
-    <ul>
-        <li><a href="animaciones/agua/index.html">Animacion/agua</a></li>
-        <li><a href="animaciones/bomba/index.html">Animacion/bomba</a></li>
-        <li><a href="animaciones/cartas/index.html">Animacion/cartas</a></li>
-        <li><a href="animaciones/comic/index.html">Animacion/comic</a></li>
-        <li><a href="animaciones/hulk/index.html">Animacion/hulk</a></li>
-        <li><a href="animaciones/mana/index.html">Animacion/mana</a></li>
-        <li><a href="animaciones/puzle/index.html">Animacion/puzle</a></li>
-        <li><a href="animaciones/ramen/index.html">Animacion/ramen</a></li>
-        <li><a href="animaciones/venecia/index.html">Animacion/venecia</a></li>
-        <li><a href="CV/index.html">CV</a></li>
-        <li><a href="Ejercicio 0/Ejercicio 0/index.html">Ejercicio 0</a></li>
-        <li><a href="pagina flex/index.html">Pagina flex</a></li>
-        <li><a href="rosalia/index.html">rosalia</a></li>
-        <li><a href="juego_espacio/index.html">Juego Espacial</a></li>
-    </ul>
+    <a class="btn" href="animaciones/agua/index.html">Animacion/agua</a><br>
+    <a class="btn" href="animaciones/bomba/index.html">Animacion/bomba</a><br>
+    <a class="btn" href="animaciones/cartas/index.html">Animacion/cartas</a><br>
+    <a class="btn" href="animaciones/comic/index.html">Animacion/comic</a><br>
+    <a class="btn" href="animaciones/hulk/index.html">Animacion/hulk</a><br>
+    <a class="btn" href="animaciones/mana/index.html">Animacion/mana</a><br>
+    <a class="btn" href="animaciones/puzle/index.html">Animacion/puzle</a><br>
+    <a class="btn" href="animaciones/ramen/index.html">Animacion/ramen</a><br>
+    <a class="btn" href="animaciones/venecia/index.html">Animacion/venecia</a><br>
+    <a class="btn" href="CV/index.html">CV</a><br>
+    <a class="btn" href="Ejercicio 0/Ejercicio 0/index.html">Ejercicio 0</a><br>
+    <a class="btn" href="pagina flex/index.html">Pagina flex</a><br>
+    <a class="btn" href="rosalia/index.html">rosalia</a><br>
+    <a class="btn" href="juego_espacio/index.html">Juego Espacial</a><br>
     <br>
     <h2>Mock Ups:</h2>
-    <ul>
-        <li><a href="files/Pagina_Cine_JuanAldama.pdf">Cines</a></li>
-    </ul>
+    <a class="btn" href="files/Pagina_Cine_JuanAldama.pdf">Cines</a><br>
     <br>
     <h2>Guias de estilo:</h2>
-    <ul>
-        <li><a href=""></a></li>
-    </ul>
+    <a class="btn" href=""></a><br>
 </body>
 </html>
