Mucho mejor hombre

--- a/index.html
+++ b/index.html
@@ -18,29 +18,41 @@
         text-align: center;
 
     }
+
+    div {
+        margin: auto;
+        width: 1000px;
+    }
+    
 </style>
 <body>
     <p>AVISO: si has visitado esta pagina antes de un cambio, recarga ya que la cache puede estar no cargando algo</p>
-    <h2>Paginas web:</h2>
-    <a class="btn" href="animaciones/agua/index.html">Animacion/agua</a><br>
-    <a class="btn" href="animaciones/bomba/index.html">Animacion/bomba</a><br>
-    <a class="btn" href="animaciones/cartas/index.html">Animacion/cartas</a><br>
-    <a class="btn" href="animaciones/comic/index.html">Animacion/comic</a><br>
-    <a class="btn" href="animaciones/hulk/index.html">Animacion/hulk</a><br>
-    <a class="btn" href="animaciones/mana/index.html">Animacion/mana</a><br>
-    <a class="btn" href="animaciones/puzle/index.html">Animacion/puzle</a><br>
-    <a class="btn" href="animaciones/ramen/index.html">Animacion/ramen</a><br>
-    <a class="btn" href="animaciones/venecia/index.html">Animacion/venecia</a><br>
-    <a class="btn" href="CV/index.html">CV</a><br>
-    <a class="btn" href="Ejercicio 0/Ejercicio 0/index.html">Ejercicio 0</a><br>
-    <a class="btn" href="pagina flex/index.html">Pagina flex</a><br>
-    <a class="btn" href="rosalia/index.html">rosalia</a><br>
-    <a class="btn" href="juego_espacio/index.html">Juego Espacial</a><br>
+    <div>
+        <h2>Paginas web:</h2>
+        <a class="btn" href="animaciones/agua/index.html">Animacion/agua</a>
+        <a class="btn" href="animaciones/bomba/index.html">Animacion/bomba</a>
+        <a class="btn" href="animaciones/cartas/index.html">Animacion/cartas</a>
+        <a class="btn" href="animaciones/comic/index.html">Animacion/comic</a>
+        <a class="btn" href="animaciones/hulk/index.html">Animacion/hulk</a>
+        <a class="btn" href="animaciones/mana/index.html">Animacion/mana</a>
+        <a class="btn" href="animaciones/puzle/index.html">Animacion/puzle</a>
+        <a class="btn" href="animaciones/ramen/index.html">Animacion/ramen</a>
+        <a class="btn" href="animaciones/venecia/index.html">Animacion/venecia</a>
+        <a class="btn" href="CV/index.html">CV</a>
+        <a class="btn" href="Ejercicio 0/Ejercicio 0/index.html">Ejercicio 0</a>
+        <a class="btn" href="pagina flex/index.html">Pagina flex</a>
+        <a class="btn" href="rosalia/index.html">rosalia</a>
+        <a class="btn" href="juego_espacio/index.html">Juego Espacial</a>
+    </div>
     <br>
-    <h2>Mock Ups:</h2>
-    <a class="btn" href="files/Pagina_Cine_JuanAldama.pdf">Cines</a><br>
+    <div>
+        <h2>Mock Ups:</h2>
+        <a class="btn" href="files/Pagina_Cine_JuanAldama.pdf">Cines</a>
+    </div>
     <br>
-    <h2>Guias de estilo:</h2>
-    <a class="btn" href=""></a><br>
+    <div>
+        <h2>Guias de estilo:</h2>
+        <a class="btn" href=""></a>
+    </div>
 </body>
 </html>
