Aviso de que carga mal

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 </style>
 <body>
     <p>AVISO: si has visitado esta pagina antes de un cambio, recarga ya que la cache puede estar no cargando algo</p>
+    <p>AVISO: Las paginas cargan muy mal asi que tendras que recargar las paginas nada mas entrar en ellas los mas seguro</p>
     <div>
         <h2>Paginas web:</h2>
         <a class="btn" href="animaciones/agua/index.html">Animacion/agua</a>
