Añadido mockup pagina de videos

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <div>
         <h2>Mock Ups:</h2>
         <a class="btn" href="files/Pagina_Cine_JuanAldama.pdf">Cines</a>
+        <a class="btn" href="files/Pagina_de_videos_JuanAldama.pdf">Pagina videos</a>
     </div>
     <br>
     <div>
