--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
         <h2>Mock Ups:</h2>
         <a class="btn" href="files/Pagina_Cine_JuanAldama.pdf">Cines</a>
         <a class="btn" href="files/Pagina_de_videos_JuanAldama.pdf">Pagina videos</a>
+        <a class="btn" href="files/mockup_cv.pdf">CV</a>
+        <a class="btn" href="files/Frame 1.png">Portfolio</a>
     </div>
     <br>
     <div>
