--- a/Ejercicio 0/Ejercicio 0/index.html
+++ b/Ejercicio 0/Ejercicio 0/index.html
@@ -13,6 +13,7 @@
 <body>
   <div id="main">
     <div id="header">
+      <div id="margin">
       <div id="logo">
         <div id="logo_text">
   
@@ -31,6 +32,7 @@
         </ul>
       </div>
     </div>
+  </div>
     <div id="content_header"></div>
     <div id="site_content">
       <div id="banner"></div>
