--- a/Ejercicio 0/Ejercicio 0/index.html
+++ b/Ejercicio 0/Ejercicio 0/index.html
@@ -33,7 +33,9 @@
       </div>
     </div>
   </div>
-    <div id="content_header"></div>
+    <div id="content_header">
+      <img src="img/banner.jpg" alt="">
+    </div>
     <div id="site_content">
       <div id="banner"></div>
 	  <div id="sidebar_container">
