Cambiar cv a version que tenia guardada

--- a/CV/index.html
+++ b/CV/index.html
@@ -57,7 +57,7 @@
                     </ul>
                 </div>
                 <div class="vr"></div>
-                <div class="col-5">
+                <div class="col-5 float-end">
                     <p>Lenguajes:</p>
                     <ul>
                         <li>C#</li>
