Lo que biene siendo version final de portfolio

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ejercicio 2</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito">
   <link rel="stylesheet" type="text/css" href="style/style.css" />
 </head>
 <body>
@@ -14,22 +15,44 @@
     <button>Contact</button>
   </div>
   <div id="home" class="apartado">
-    
+    <h1>Welcome to my portfolio!</h1>
+    <img src="img/logo.png" alt="">
   </div>
   <div id="about" class="apartado">
     <h1>About</h1>
     <div class="text">
       <a>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</a>
     </div>
-    <div>
-
+    <div class="image">
+      <img src="img/profile.png" alt="">
+      <p>Juan Aldama Fernandez</p>
     </div>
   </div>
   <div id="works" class="apartado">
     <h1>Works</h1>
+    <div class="text">
+      <ul>
+        <li>Work 1</li>
+        <li>Work 2</li>
+        <li>Work 3</li>
+        <li>Work 4</li>
+      </ul>
+    </div>
+    <div class="image">
+      <img src="img/photos.png" alt="">
+      <p>Select one of the works to see a image and a description of it</p>
+    </div>
   </div>
   <div id="contact" class="apartado">
     <h1>Contact</h1>
+    <div class="text">
+      <img src="img/twitter.png" alt="">
+      <p>@InFiNiTi_OWO</p>
+    </div>
+    <div class="text2">
+      <img src="img/email.png" alt="">
+      <p>ancamaju.jaf@gmail.com</p>
+    </div>
   </div>
 </body>
 </html>
