--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <br>
     <div>
         <h2>Guias de estilo:</h2>
-        <a class="btn" href=""></a>
+        <a class="btn" href="files/Guía de estilos Portfolio.pdf">Portfolio</a>
     </div>
 </body>
 </html>
