--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <a class="btn" href="animaciones/venecia/index.html">Animacion/venecia</a>
         <a class="btn" href="CV/index.html">CV</a>
         <a class="btn" href="Ejercicio 0/Ejercicio 0/index.html">Ejercicio 0</a>
+        <a class="btn" href="plantilla/index.html">Pagina flex</a>
         <a class="btn" href="rosalia/index.html">rosalia</a>
         <a class="btn" href="juego_espacio/index.html">Juego Espacial</a>
         <a class="btn" href="Portfolio/index.html">Portfolio</a>
