--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <div>
         <h2>Guias de estilo:</h2>
         <a class="btn" href="files/Guía de estilos Portfolio.pdf">Portfolio</a>
+        <a class="btn" href="files/Guía de estilos Juego espacial.pdf">Juego espacial</a>
     </div>
 </body>
 </html>
