--- a/animaciones/kart_svg/index.html
+++ b/animaciones/kart_svg/index.html
@@ -81,7 +81,53 @@
                         </animateMotion>
                     </image>
         </svg>
-        
+    </div>
+    <div style="background-image: url('img/circuito.png'); width: 1000px; height: 1000px;">
+        <svg xmlns="http://www.w3.org/2000/svg"
+        xmlns:xlink="http://www.w3.org/2000/svg"
+        width="1000px" 
+        viewBox="0 0 1000 1000" >
+        <path id="animatePath3"
+                fill="none" stroke="transparent" stroke-width="1"
+                d="M 214.00,809.00
+           C 214.00,809.00 882.00,804.00 882.00,804.00
+             937.25,803.50 995.00,710.00 934.00,633.00
+             934.50,633.00 893.62,579.50 893.62,579.50
+             866.12,548.00 837.50,514.50 869.00,448.75
+             869.00,448.75 916.73,365.09 939.09,325.64
+             974.00,260.00 921.09,226.36 901.00,216.00
+             853.09,195.27 825.69,175.49 772.00,245.00
+             772.00,245.00 694.00,372.00 694.00,372.00
+             680.91,393.82 681.64,429.45 704.00,467.00
+             704.00,467.00 818.00,669.00 818.00,669.00
+             842.18,709.27 836.91,796.91 755.09,802.91
+             755.09,802.91 684.00,802.55 654.73,758.55
+             654.73,758.55 524.00,520.00 524.00,520.00
+             514.91,499.09 512.36,473.09 530.18,434.55
+             530.18,434.55 594.00,321.00 594.00,321.00
+             605.82,303.27 618.29,249.41 566.00,226.00
+             566.00,226.00 514.00,195.00 514.00,195.00
+             483.64,181.82 450.18,191.09 421.00,246.00
+             421.00,246.00 368.00,348.00 368.00,348.00
+             355.64,370.91 327.27,423.09 356.00,468.00
+             356.00,468.00 466.00,657.00 466.00,657.00
+             498.18,706.36 485.27,804.91 421.64,806.91
+             421.64,806.91 369.27,807.45 369.27,807.45
+             341.45,808.09 341.75,800.50 281.00,712.00
+             281.00,712.00 70.00,354.00 70.00,354.00
+             60.18,335.82 44.67,311.10 70.00,260.00
+             72.20,259.40 108.64,166.19 186.00,199.00
+             186.00,199.00 219.00,219.00 219.00,219.00
+             266.00,248.36 257.27,310.55 238.00,343.00
+             238.00,343.00 54.00,667.00 54.00,667.00
+             33.09,709.27 41.00,810.75 121.67,809.67
+             121.67,809.67 214.12,808.88 214.12,808.88" />
+                    <image id="coche3" href="img/luigi.png" alt="" y="-20" x="-20" width="40px" height="40px">
+                        <animateMotion href="#coche3" dur="15s" repeatCount="indefinite" rotate="auto">
+                            <mpath href="#animatePath3" />
+                        </animateMotion>
+                    </image>
+        </svg>
     </div>
 </body>
 </html>
