--- a/animaciones/paralax/index.html
+++ b/animaciones/paralax/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <div id="contenedor">
-        <div id="_0"></div>
-        <div id="_1"></div>
-        <div id="_2"></div>
-        <div id="_3"></div>
-        <div id="_4"></div>
-        <div id="_5"></div>
-        <div id="_6"></div>
-        <div id="_7"></div>
+        <div style="left:-12px;" id="_0"></div>
+        <div style="left:-12px;" id="_1"></div>
+        <div style="left:-11px;" id="_2"></div>
+        <div style="left:-10px;" id="_3"></div>
+        <div style="left:-10px;" id="_4"></div>
+        <div style="left:-9px;" id="_5"></div>
+        <div style="left:-6px;" id="_6"></div>
+        <div style="left:-5px;" id="_7"></div>
         <div id="_8"></div>
         <div id="cover"></div>
     </div>
