--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <a class="btn" href="animaciones/venecia/index.html">Animacion/venecia</a>
         <a class="btn" href="animaciones/kart/index.html">Animacion/kart</a>
         <a class="btn" href="animaciones/kart_svg/index.html">Animacion/kart svg</a>
+        <a class="btn" href="animaciones/paralax/index.html">Animacion/paralax</a>
         <a class="btn" href="CV/index.html">CV</a>
         <a class="btn" href="Ejercicio 0/Ejercicio 0/index.html">Ejercicio 0</a>
         <a class="btn" href="plantilla/index.html">Plantilla</a>
